Add internal css style in index.html (body and hr)

--- a/contact-me.html
+++ b/contact-me.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 </head>
-<body>
+<body style="background-color:#E3FDFD;">
     <h1>Contact Details</h1>
     <p>E-mail: thiago.zani@uol.com.br</p>
     <p>Cell: +55 12 99620-2320</p>
