--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Thiago's Personal Site</title>
+
+<style>
+
+    body {
+        background-color:#E3FDFD;
+    }
+
+    hr {
+        border-style: none;
+        border-top-style: dotted;
+        width: 5%;
+        border-color: #9cb2b2;
+        border-width: 7px;        
+    }
+
+</style>
+
 </head>
 <body>
     <table>
